# PP_image_resizer_cuda

./: CMakeLists.txt  README.md  main.cu
